data/derived/comb/progs/unify/prog6369.ml.out
Characters 51-58:
  let _ = stringOfList (stringOfList string_of_int) [[1;2;3];[4;5];[6];[]];;
                                                     ^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type string
